Changelog
=========

0.11 (unreleased)
-----------------

- Nothing changed yet.


0.10 (2013-07-16)
-----------------

- To show edit popup, test the fact any workflow action is available
  instead of just testing Review portal content right.

- Fix: check global copy right to show copy button.

- All cells have a class. Avoid wrap in modified cell.

- Do not show upload viewlet if there is no addable type that matches
  with a file content type set up in content types registry.

- Generate scales when we add images in and edm listing.
  [thomasdesvenain]


0.9 (2013-03-20)
----------------

- Plone 4.3 compatible.


0.8 (2013-02-15)
----------------

- Class that gets folder contents and renders a table is a multi adapter
  on context and request.
  [thomasdesvenain]

- German translation.
  [thomasdesvenain]


0.7 (2012-11-06)
----------------

- Added a column to quick view images in an overlay.
  [thomasdesvenain]


0.6 (2012-09-10)
----------------

- Do not display state column in folders where all contents have no workflow.
  [thomasdesvenain]


0.5 (2012-08-29)
----------------

- If we have a sortable_size index, we can sort by size.
  [thomasdesvenain]

- We can sort by review state.
  [thomasdesvenain]


0.4 (2012-08-24)
----------------

- Added columns have an 'available' method.
  [thomasdesvenain]

- Added columns can be sortable on an index
  if sort_index attribute is set on column class.
  [thomasdesvenain]

- Fixed batching with default sort_on.
  [vincentfretin]

- Folder buttons displays are consistent with listing columns global displays.
  (if 'delete' column is disabled or empty, 'delete' button is not displayed')
  [thomasdesvenain]

- Paste button is separated to "selected elements" folder action buttons (delete, paste, etc).
  [thomasdesvenain]

- ecreall.trashcan integration.
  [thomasdesvenain]

- Added a view "listingoptions" that allows to setup some behaviours:
    - sort mode
    - default sort criterion
    - default sort order